<resources>
    <string name="app_name">EI9</string>

    <string name="scan_image">Scanner un bien</string>
    <string name="title_activity_ad_details">Ad_details</string>
    <string name="scan_no_result">L\'image scannée n\'a pas été reconnue</string>
    <string name="scan_error">Une erreur a empêchée le scan de l\'image</string>
    <string name="no_saved_ad">Scanner l\'image d\'un bien pour consulter son annonce</string>

    //URL WS
    <string name="ad_url">http://www.explorimmo.com/rest/programs/</string>
    <string name="contact_form_url">http://www.explorimmoneuf.com/neuf/programme/contacts/ajouter.json</string>

    //TAG XITI
    <string name="hit_scan_onprint">search::onPrint</string>
    <string name="hit_detail">search::detail programme</string>
    <string name="hit_slideshow">detail programme::slideshow</string>
    <string name="hit_contact">search::detail_programme::demande-info</string>
    <string name="hit_contact_send">search::detail_programme::confirmation_demande-info</string>


    //Détail d'une annonce
    <string name="delivery_date">Date de livraison:</string>
    <string name="modification_date">Date de modification:</string>
    <string name="ad_type">Type de bien:</string>
    <string name="immediate_delivery">Livraison immédiate:</string>
    <string name="info_ask">Demande d\'info</string>
    <string name="fisc_dispositif">Dispositifs fiscaux:</string>
    <string name="option">Options:</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="available_ad">Les logements disponibles:</string>
    <string name="nb_room">Nombre de pièces:</string>
    <string name="surface">Surface:</string>
    <string name="etage">Etage:</string>
    <string name="nc">n/c</string>
    <string name="from">À partir de </string>
    <string name="m2">m\u00B2</string>
    <string name="de">De </string>
    <string name="a"> à </string>
    <string name="Network_ConnectionError_Message">Vérifiez votre connexion Internet.</string>
    <string name="Network_ConnectionError_Title">Connexion impossible</string>



    //Formulaire de contact
    <string name="civilite">Civilité</string>
    <string name="name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="email">Votre email</string>
    <string name="tel">Votre téléphone</string>
    <string name="adress">Adresse</string>
    <string name="cp">Code postal</string>
    <string name="town">Ville</string>
    <string name="message">Votre message</string>
    <string name="send">Envoyer</string>
    <string name="title_activity_contact_form">Contact_form</string>
    <string name="error">Erreur</string>
    <string name="civilite_error">Veuillez choisir une civilité</string>

    <string name="action_settings">Settings</string>


    <string name="server_message">Message du serveur!</string>
    <string name="server_message_ok">Votre demande d\'information a bien été envoyée.</string>

    <string-array name="civilites">
        <item>M.</item>
        <item>Mme</item>
        <item>Mlle</item>
    </string-array>
    <string-array name="list_menu">
        <item>Supprimer</item>
    </string-array>
    <string name="title_activity_fullscreen_slider">Fullscreen_slider</string>

    <string name="hello_world">Hello world!</string>


</resources>
