<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="213dp" >

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:background="#5000"
                android:gravity="center_vertical"
                android:padding="2dp" >

                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/indicator"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </FrameLayout>

        <ProgressBar
            android:id="@+id/progress_descriptif_circle"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/view_info_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/localisation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/ei9_green_blue"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"
                android:maxLines="2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_light"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:gravity="left"
                    android:layout_marginLeft="2dp"
                    android:text="@string/delivery_date"/>

                <TextView
                    android:id="@+id/delivery_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/ei9_green_blue"
                    android:gravity="right"
                    android:layout_marginRight="2dp"/>

                </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_light"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:gravity="left"
                    android:layout_marginLeft="2dp"
                    android:text="@string/modification_date"/>

                <TextView
                    android:id="@+id/modification_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/ei9_green_blue"
                    android:gravity="right"
                    android:layout_marginRight="2dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_light"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:gravity="left"
                    android:layout_marginLeft="2dp"
                    android:text="@string/ad_type"/>

                <TextView
                    android:id="@+id/ad_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/ei9_green_blue"
                    android:gravity="right"
                    android:layout_marginRight="2dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_light"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:gravity="left"
                    android:layout_marginLeft="2dp"
                    android:text="@string/immediate_delivery"/>

                <TextView
                    android:id="@+id/immediate_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/ei9_green_blue"
                    android:gravity="right"
                    android:layout_marginRight="2dp"/>

            </LinearLayout>


            <Button
                android:id="@+id/info_ask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_action"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="18sp"
                android:text="@string/info_ask"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:background="@color/grey_dark"/>

                <TextView
                    android:id="@+id/ad_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/fisc_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/fisc_dispositif"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_light"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fisc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/ei9_green_blue"
                    android:layout_gravity="right"/>

                </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/option"/>

            <TableLayout
                android:id="@+id/options_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*" >

            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/available_ad"/>

            <ListView
                android:id="@+id/available_ad_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>
    </LinearLayout>

</ScrollView>